[gd_scene load_steps=5 format=3 uid="uid://ttx4enfs2emr"]

[ext_resource type="Script" path="res://Scripts/npc_base.gd" id="1_o5k2l"]
[ext_resource type="PackedScene" uid="uid://dx66r72wkfdli" path="res://Scenes/GUI/caixa_dialogo.tscn" id="2_g2mey"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ub5bx"]
size = Vector2(48, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kw6ty"]
size = Vector2(32, 32)

[node name="npc_base" type="StaticBody2D"]
collision_layer = 2
collision_mask = 0
script = ExtResource("1_o5k2l")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_ub5bx")

[node name="area_interagir" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="area_interagir"]
shape = SubResource("RectangleShape2D_kw6ty")
debug_color = Color(0, 0.529412, 0.996078, 0.419608)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CaixaDialogo" parent="CanvasLayer" instance=ExtResource("2_g2mey")]

[connection signal="area_entered" from="area_interagir" to="." method="_on_area_interagir_area_entered"]
[connection signal="area_exited" from="area_interagir" to="." method="_on_area_interagir_area_exited"]
